--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,22 +17,22 @@ crate-type = ["cdylib"]
 lto = true
 
 [features]
-# If you uncomment this line, it will enable `wee_alloc`:
-#default = ["wee_alloc"]
 
 [dependencies]
-# The `wasm-bindgen` crate provides the bare minimum functionality needed
-# to interact with JavaScript.
 wasm-bindgen = "0.2.78"
 console_error_panic_hook = "0.1.7"
 rand = "0.8.5"
 getrandom = { version = "0.2.3", features = ["js"] }
+futures = "0.3.18"
+wasm-bindgen-futures = "0.4.28"
+serde = { version = "1.0.183", features = ["derive"] }
+gloo-utils = { version = "0.1", features = ["serde"] }
 
 # The `web-sys` crate allows you to interact with the various browser APIs,
 # like the DOM.
 [dependencies.web-sys]
 version = "0.3.55"
-features = ["console", "Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "Element"]
+features = ["console", "Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "Element", "HtmlImageElement", "Response"]
 
 # These crates are used for running unit tests.
 [dev-dependencies]
