--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,12 +27,14 @@ futures = "0.3.18"
 wasm-bindgen-futures = "0.4.28"
 serde = { version = "1.0.183", features = ["derive"] }
 gloo-utils = { version = "0.1", features = ["serde"] }
+anyhow = "1.0.75"
+async-trait = "0.1.73"
 
 # The `web-sys` crate allows you to interact with the various browser APIs,
 # like the DOM.
 [dependencies.web-sys]
 version = "0.3.55"
-features = ["console", "Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "Element", "HtmlImageElement", "Response"]
+features = ["console", "Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "Element", "HtmlImageElement", "Response", "Performance"]
 
 # These crates are used for running unit tests.
 [dev-dependencies]
