--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,18 @@ async-trait = "0.1.73"
 # like the DOM.
 [dependencies.web-sys]
 version = "0.3.55"
-features = ["console", "Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "Element", "HtmlImageElement", "Response", "Performance"]
+features = [
+    "console",
+    "Window",
+    "Document",
+    "HtmlCanvasElement",
+    "CanvasRenderingContext2d",
+    "Element",
+    "HtmlImageElement",
+    "Response",
+    "Performance",
+    "KeyboardEvent",
+]
 
 # These crates are used for running unit tests.
 [dev-dependencies]
