--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ async-trait = "0.1.73"
 # The `web-sys` crate allows you to interact with the various browser APIs,
 # like the DOM.
 [dependencies.web-sys]
-version = "0.3.55"
+version = "0.3.64"
 features = [
     "console",
     "Window",
@@ -45,6 +45,9 @@ features = [
     "Response",
     "Performance",
     "KeyboardEvent",
+    "AudioContext",
+    "AudioBufferSourceNode",
+    "AudioDestinationNode",
 ]
 
 # These crates are used for running unit tests.
