--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ features = [
     "Performance",
     "KeyboardEvent",
     "AudioContext",
+    "AudioBuffer",
     "AudioBufferSourceNode",
     "AudioDestinationNode",
 ]
